--- a/css/layout.css
+++ b/css/layout.css
@@ -193,10 +193,11 @@ margin: 0 5px;
 /* Sidebar */
 
 aside#sidebar {
-width: 23%;
-background: #E0E0E3 url(../images/sidebar.png) repeat;
+width: 17%;
+//background: #E0E0E3 url(../images/sidebar.png) repeat;
+background: linear-gradient(#000000,#000011 );
 float: left;
-min-height: 500px;
+min-height: 1000px;
 margin-top: -4px;
 }
 
@@ -271,15 +272,19 @@ text-decoration: none;
 #sidebar ul {
 clear: both;
 margin: 0; padding: 0;
+
 }
 
 #sidebar li {
 list-style: none;
 margin: 0 0 0 12%; padding: 0;
+background: linear-gradient(#000000,#000011);
+color: white;
+padding: 10px 10px 10px 10px;
 }
 
 #sidebar li a {
-color: #666666;
+color: white;
 padding-left: 25px;
 text-decoration: none;
 display: inline-block;
@@ -290,13 +295,14 @@ margin: 2px 0;
 }
 
 #sidebar li a:hover {
-color: #444444;
+color: red;
 }
 
 /* Sidebar Icons */
 
 #sidebar li.icn_new_article a {
 background: url(../images/icn_new_article.png) no-repeat center left;
+
 }
 #sidebar li.icn_edit_article a {
 background: url(../images/icn_edit_article.png) no-repeat center left;
